
- replaced popups when Poedit is started for the first time with
  unobtrusive Firefox-style notifications
- selecting suggested translation from right-click popup menu now
  correctly removes fuzzy flag from the translation
- warn the user if Plural-Forms header is inconsistent with the number
  of plural translations in the catalog
- Boost library is now required when compiling from sources


Version 1.4.2
-------------

- Unix: fixed Ctrl+Up/Down/PgUp/PgDn shortcuts when NumLock is on (#2006843)
- OS X: fixed running Gettext tools when Poedit is in directory with
  spaces in its name (#2025823)
- added Uyghur translation (Abduqadir Abliz)


Version 1.4.1
-------------

- fixed HTML export to properly escape the text (#1739062)
- remember last used search phrase in Find window (#1909847)
- Windows: fixed text entry using AltGr on many European keyboards


Version 1.4
-----------

- wxWidgets >= 2.8 is now required when compiling from sources
- don't show comments windows by default to avoid confusion
- OS X: fixed conflict with 10.5's Spaces - Command-arrows can now be used
  to navigate in the list control in addition to Ctrl-arrows
- Windows, OS X: significantly faster updating of catalogs on multi-core
  machines (on Linux, some distributions included multi-threaded gettext,
  some don't)
- fixed remaining problems with list selection
- use more standard way of differentiating between different kinds of
  entries in the list (translated, fuzzy, new) by using font variants
  instead of different background colors (#1863332)
- don't update PO-Revision-Date header if it's unused (#1900298)
- Windows: common shortcuts like Ctrl-A or Ctrl-backspace now work
- added Belarusian latin translation (Alaksandar Navicki)


Version 1.3.9
-------------

- OS X: fixed corruption of first entry when opening catalog from manager


Version 1.3.8
-------------

- OS X: fixed startup on computers that didn't have Poedit installed before