@@ -5,6 +5,8 @@
   correctly removes fuzzy flag from the translation
 - warn the user if Plural-Forms header is inconsistent with the number
   of plural translations in the catalog
+- correctly deduce catalog's language from filenames in the form of
+  foo.LANG.po, as used by several large Open Source projects (#2026230)
 - Boost library is now required when compiling from sources
 
 
